--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <!-- Preload critical hero images -->
     <link rel="preload" as="image" href="images/dealer-services-hero.webp" type="image/webp">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/hero-slider.css">
-    <link rel="stylesheet" href="css/blur-up.css">
-    <link rel="stylesheet" href="css/chat-widget.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="hero-slider.css">
+    <link rel="stylesheet" href="blur-up.css">
+    <link rel="stylesheet" href="chat-widget.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Ran Tranz Logo" width="240" height="80">
+                    <img src="logo.png" alt="Ran Tranz Logo" width="240" height="80">
                 </a>
             </div>
             <nav>
@@ -60,7 +60,7 @@
                     <div class="lqip" style="background-image: url('images/Dealer Network Slide.jpg'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Dealer Network Slide.jpg" type="image/jpeg">
-                        <img src="images/Dealer Network Slide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
+                        <img src="Dealer Network Slide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
                     </picture>
                 </div>
                 <div class="hero-content animate-fade-in">
@@ -77,7 +77,7 @@
                     <div class="lqip" style="background-image: url('images/Global Shipping Slide.png'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Global Shipping Slide.png" type="image/png">
-                        <img src="images/Global Shipping Slide.png" alt="Global Shipping Services" class="hero-bg blur-up global-shipping-img" loading="lazy">
+                        <img src="Global Shipping Slide.png" alt="Global Shipping Services" class="hero-bg blur-up global-shipping-img" loading="lazy">
                     </picture>
                 </div>
                 <div class="hero-content">
@@ -94,7 +94,7 @@
                     <div class="lqip" style="background-image: url('images/Premium Fleet.jpg'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Premium Fleet.jpg" type="image/jpeg">
-                        <img src="images/Premium Fleet.jpg" alt="Premium Car Fleet" class="hero-bg blur-up premium-fleet-img" loading="lazy">
+                        <img src="Premium Fleet.jpg" alt="Premium Car Fleet" class="hero-bg blur-up premium-fleet-img" loading="lazy">
                     </picture>
                 </div>
                 <div class="hero-content premium-content">
@@ -255,7 +255,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <div class="footer-logo">
-                        <img src="images/logo.png" alt="Ran Tranz Logo" width="180" height="60">
+                        <img src="logo.png" alt="Ran Tranz Logo" width="180" height="60">
                     </div>
                     <p>Providing comprehensive procurement and shipping solutions for individuals and businesses.</p>
                     <div class="social-icons">
@@ -310,7 +310,7 @@
         </button>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/image-loader.js"></script>
+    <script src="script.js"></script>
+    <script src="image-loader.js"></script>
 </body>
 </html>
