--- a/about.html
+++ b/about.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Ran Tranz</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/chat-widget.css">
-    <link rel="stylesheet" href="css/hero-slider.css">
-    <link rel="stylesheet" href="css/about-enhanced.css">
-    <link rel="stylesheet" href="css/partners-section.css">
-    <link rel="stylesheet" href="css/team-section-enhanced.css">
-    <link rel="stylesheet" href="css/stats-counter-enhanced.css">
-    <link rel="stylesheet" href="css/value-propositions-animated.css">
-    <link rel="stylesheet" href="css/awards-preview.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="chat-widget.css">
+    <link rel="stylesheet" href="hero-slider.css">
+    <link rel="stylesheet" href="about-enhanced.css">
+    <link rel="stylesheet" href="partners-section.css">
+    <link rel="stylesheet" href="team-section-enhanced.css">
+    <link rel="stylesheet" href="stats-counter-enhanced.css">
+    <link rel="stylesheet" href="value-propositions-animated.css">
+    <link rel="stylesheet" href="awards-preview.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Ran Tranz Logo" width="240" height="80">
+                    <img src="logo.png" alt="Ran Tranz Logo" width="240" height="80">
                 </a>
             </div>
             <nav>
@@ -781,10 +781,10 @@
         </button>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/about-enhanced.js"></script>
-    <script src="js/partners-section.js"></script>
-    <script src="js/enhanced-stats-counter.js"></script>
+    <script src="script.js"></script>
+    <script src="about-enhanced.js"></script>
+    <script src="partners-section.js"></script>
+    <script src="enhanced-stats-counter.js"></script>
     <script src="js/value-propositions-animated.js"></script>
 </body>
 </html>
