--- a/services.html
+++ b/services.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - Ran Tranz</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/chat-widget.css">
-    <link rel="stylesheet" href="css/hero-slider.css">
-    <link rel="stylesheet" href="css/services-enhanced.css">
-    <link rel="stylesheet" href="css/services-interactive.css">
-    <link rel="stylesheet" href="css/estimate-breakdown.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="chat-widget.css">
+    <link rel="stylesheet" href="hero-slider.css">
+    <link rel="stylesheet" href="services-enhanced.css">
+    <link rel="stylesheet" href="services-interactive.css">
+    <link rel="stylesheet" href="estimate-breakdown.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Image preload -->
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Ran Tranz Logo" width="240" height="80">
+                    <img src="logo.png" alt="Ran Tranz Logo" width="240" height="80">
                 </a>
             </div>
             <nav>
@@ -627,8 +627,8 @@
         </button>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/services-interactive.js"></script>
+    <script src="script.js"></script>
+    <script src="services-interactive.js"></script>
     <script>
         // Additional JavaScript for dynamic form fields
         document.addEventListener('DOMContentLoaded', function() {
