--- a/testimonials.html
+++ b/testimonials.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Ran Tranz Logo" width="240" height="80">
+                    <img src="logo.png" alt="Ran Tranz Logo" width="240" height="80">
                 </a>
             </div>
             <nav>
