--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Ran Tranz</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/chat-widget.css">
-    <link rel="stylesheet" href="css/chat-widget-enhanced.css">
-    <link rel="stylesheet" href="css/contact-enhanced.css">
-    <link rel="stylesheet" href="css/hero-slider.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="chat-widget.css">
+    <link rel="stylesheet" href="chat-widget-enhanced.css">
+    <link rel="stylesheet" href="contact-enhanced.css">
+    <link rel="stylesheet" href="hero-slider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Ran Tranz Logo" width="240" height="80">
+                    <img src="logo.png" alt="Ran Tranz Logo" width="240" height="80">
                 </a>
             </div>
             <nav>
@@ -411,7 +411,7 @@
         </button>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/contact-enhanced.js"></script>
+    <script src="script.js"></script>
+    <script src="contact-enhanced.js"></script>
 </body>
 </html>
