--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="lqip" style="background-image: url('images/Dealer Network Slide.jpg'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Dealer Network Slide.jpg" type="image/jpeg">
-                        <img src="Dealer Network Slide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
+                        <img src="DealerNetworkSlide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
                     </picture>
                 </div>
                 <div class="hero-content animate-fade-in">
@@ -77,7 +77,7 @@
                     <div class="lqip" style="background-image: url('images/Global Shipping Slide.png'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Global Shipping Slide.png" type="image/png">
-                        <img src="Global Shipping Slide.png" alt="Global Shipping Services" class="hero-bg blur-up global-shipping-img" loading="lazy">
+                        <img src="GlobalSlide.png" alt="Global Shipping Services" class="hero-bg blur-up global-shipping-img" loading="lazy">
                     </picture>
                 </div>
                 <div class="hero-content">
@@ -94,7 +94,7 @@
                     <div class="lqip" style="background-image: url('images/Premium Fleet.jpg'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Premium Fleet.jpg" type="image/jpeg">
-                        <img src="Premium Fleet.jpg" alt="Premium Car Fleet" class="hero-bg blur-up premium-fleet-img" loading="lazy">
+                        <img src="PremiumFleet.jpg" alt="Premium Car Fleet" class="hero-bg blur-up premium-fleet-img" loading="lazy">
                     </picture>
                 </div>
                 <div class="hero-content premium-content">
