--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="lqip" style="background-image: url('images/Dealer Network Slide.jpg'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
                         <source srcset="images/Dealer Network Slide.jpg" type="image/jpeg">
-                        <img src="DealerNetworkSlide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
+                        <img src="DealerSlide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
                     </picture>
                 </div>
                 <div class="hero-content animate-fade-in">
