--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="progressive-image-container">
                     <div class="lqip" style="background-image: url('images/Dealer Network Slide.jpg'); background-size: cover; filter: blur(20px);"></div>
                     <picture>
-                        <source srcset="images/Dealer Network Slide.jpg" type="image/jpeg">
+                        <source srcset="DealerSlide.jpg" type="image/jpeg">
                         <img src="DealerSlide.jpg" alt="Dealer Services" class="hero-bg blur-up dealer-network-img" loading="eager">
                     </picture>
                 </div>
